--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,10 +1,7 @@
 {% extends 'core/base.html' %}
-{% block content  %}
-<h1>sobre nosotros</h1>
-    <hr>
-    <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut neque ab fugit provident cupiditate. Nostrum, mollitia officiis ratione itaque pariatur inventore delectus earum! Aliquam doloribus blanditiis architecto atque corrupti quod.
-    </p>
-    <hr>
-
+{% block content %}
+<h3>Información de la Empresa</h3>
+<p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut neque ab fugit provident cupiditate. Nostrum, mollitia officiis ratione itaque pariatur inventore delectus earum! Aliquam doloribus blanditiis architecto atque corrupti quod.
+</p>
 {% endblock %}
