se añade 2 secciones mas a navegacion, con 2 vistas mas en url, view y templates. gallery yfaqs

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -194,7 +194,9 @@
             <h2>Navegación</h2>
             <nav>
                 <a href="/">Inicio</a> |
-                <a href="/about/">Sobre nosotros</a>
+                <a href="/about/">Sobre nosotros</a> |
+                <a href="/gallery/">Galeria de imagenes</a> |
+                <a href="/faqs/">Preguntas frecuentes</a>
             </nav>
         </div>
         
