avance en  css base.html

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -185,13 +185,12 @@
     <div class="layout-grid">
         <!-- Banner global -->
         <div id="banner">
-            <h1>Mi Sitio Web</h1>
-            <p>Bienvenidos a nuestro proyecto</p>
+            <h1>Catalogo online</h1>
+            <p>Talleres y actividades</p>
         </div>
         
         <!-- Navbar global -->
-        <div id="navbar">
-            <h2>Navegación</h2>
+        <div id="navbar">          
             <nav>
                 <a href="/">Inicio</a> |
                 <a href="/about/">Sobre nosotros</a> |
@@ -220,7 +219,7 @@
         <!-- Footer global -->
         <div id="footer">
             <h3>Footer</h3>
-            <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            <p>Code by <a href="https://github.com/Javitajonnes">Javitajonnes</a></p>
         </div>
         
         <!-- Redes sociales global -->
