--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -178,6 +178,8 @@
             grid-column: 1 / 4;
             padding: 20px;
             text-align: center;
+            color: white;
+            
         }
     </style>    
 </head>
