modificacion de textos y contenidos de todas las vistas, para dar contexto a proyecto

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,7 +1,29 @@
 {% extends 'core/base.html' %}
 {% block content %}
-<h3>Información de la Empresa</h3>
-<p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut neque ab fugit provident cupiditate. Nostrum, mollitia officiis ratione itaque pariatur inventore delectus earum! Aliquam doloribus blanditiis architecto atque corrupti quod.
-</p>
+<h3>Somos Blogfiction.cl</h3>
+<p>Un espacio hecho por y para entusiastas de las experiencias lúdicas, donde los juegos de mesa, el coleccionismo y la tecnología convergen para generar comunidad y diversión.</p>
+
+<div style="margin-bottom: 30px;">
+    <h4 style="color: #B8F2E8; margin-bottom: 15px;">🎯 Nuestra Misión</h4>
+    <p>Desde nuestra academia de duelos hasta nuestras ferias interactivas, estamos comprometidos con crear ambientes lúdicos inclusivos, creativos e inspiradores para personas de todas las edades.</p>
+</div>
+
+<div style="margin-bottom: 30px;">
+    <h4 style="color: #B8F2E8; margin-bottom: 15px;">💎 Pasión por el Coleccionismo</h4>
+    <p>Nos mueve la pasión por el coleccionismo, entendiendo ese fascinante mundo donde cada pieza es una historia. Nuestra misión es conectar a coleccionistas, facilitar el intercambio de experiencias y potenciar el valor de cada colección.</p>
+</div>
+
+<div style="margin-bottom: 30px;">
+    <h4 style="color: #B8F2E8; margin-bottom: 15px;">⚡ Innovación Tecnológica</h4>
+    <p>Creemos que el futuro del ocio está en la fusión entre lo tradicional y lo digital. Por eso, incorporamos herramientas tecnológicas que amplifican la magia de los juegos de mesa, haciéndolos más accesibles, inmersivos y colaborativos.</p>
+</div>
+
+<div style="margin-bottom: 30px;">
+    <h4 style="color: #B8F2E8; margin-bottom: 15px;">🤝 Construyendo Comunidad</h4>
+    <p>Más que ofrecer entretenimiento, queremos construir comunidad. Queremos que cada visita a nuestras actividades sea una oportunidad para conocer personas, descubrir pasiones compartidas y crear recuerdos.</p>
+</div>
+
+<div style="text-align: center; margin-top: 40px;">
+    <a href="/" class="btn" style="background: #FFA69E; color: white;">Explora nuestros servicios</a>
+</div>
 {% endblock %}
