--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -38,18 +38,21 @@
         }
         
         h3 {
+            font-family: 'Roboto', sans-serif;
             font-size: 1.5em;
             font-weight: 600;
             letter-spacing: -0.2px;
         }
         
         h4 {
+            font-family: 'Roboto', sans-serif;
             font-size: 1.25em;
             font-weight: 500;
             letter-spacing: -0.1px;
         }
         
         p {
+            font-family: 'Roboto', sans-serif;
             font-weight: 400;
             margin: 0 0 15px 0;
             line-height: 1.7;
@@ -217,13 +220,9 @@
         
         <!-- Sidebar izquierdo -->
         <div id="ads1">
-            <h3>🎲 Próximos Eventos</h3>
-            <p><strong>Torneo de Juegos de Mesa</strong><br>
-            Sábado 15 de Marzo<br>
-            15:00 - 20:00 hrs</p>
-            <p><strong>Feria de Coleccionismo</strong><br>
-            Domingo 22 de Marzo<br>
-            10:00 - 18:00 hrs</p>
+            {% block ads1 %}
+            {% include 'core/includes/ads_info.html' %}
+            {% endblock %}
         </div>
         
         <!-- Contenido principal (se llena con el bloque content) -->
@@ -233,13 +232,9 @@
         
         <!-- Sidebar derecho -->
         <div id="ads2">
-            <h3>💎 Coleccionismo</h3>
-            <p><strong>Intercambios</strong><br>
-            Conecta con otros coleccionistas</p>
-            <p><strong>Exposiciones</strong><br>
-            Muestra tu colección</p>
-            <p><strong>Piezas Especiales</strong><br>
-            Encuentra lo que buscas</p>
+            {% block ads2 %}
+            {% include 'core/includes/ads_info.html' %}
+            {% endblock %}
         </div>
         
         <!-- Footer global -->
