se agrega app posteo: noticias.html, modelo con create, update y delete, super user

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -212,6 +212,7 @@
         <div id="navbar">            
             <nav>
                 <a href="/">Inicio</a> |
+                <a href="/noticias/">Noticias</a> |
                 <a href="/about/">Sobre nosotros</a> |
                 <a href="/gallery/">Galería de imágenes</a> |
                 <a href="/faqs/">Preguntas frecuentes</a>
