--- a/core/templates/core/faqs.html
+++ b/core/templates/core/faqs.html
@@ -43,7 +43,7 @@
 </div>
 
 <div style="text-align: center; margin-top: 40px;">
-    <a href="/about/" class="btn" style="background: #AED9E0; color: #5E6472;">Conoce más sobre nosotros</a>
+    <a href="{% url 'core:about' %}" class="btn" style="background: #AED9E0; color: #5E6472;">Conoce más sobre nosotros</a>
     <a href="/" class="btn" style="background: #FFA69E; color: white; margin-left: 15px;">Ver nuestros servicios</a>
 </div>
 {% endblock %}
