--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -25,6 +25,6 @@
 </div>
 
 <div style="text-align: center; margin-top: 40px;">
-    <a href="/about/" class="btn" style="background: #AED9E0; color: #5E6472;">Conoce más sobre nosotros</a>
+    <a href="{% url 'core:about' %}" class="btn" style="background: #AED9E0; color: #5E6472;">Conoce más sobre nosotros</a>
 </div>
 {% endblock %}
