--- a/contact/templates/contact/contacto.html
+++ b/contact/templates/contact/contacto.html
@@ -26,7 +26,9 @@
                             {% csrf_token %}
                             {{ form|crispy }}
                             <div class="mt-3 text-end">
-                                <button type="submit" class="btn btn-primary px-4">Enviar</button>
+                                <button type="submit" class="btn btn-primary px-4">
+                                    <i class="bi bi-send"></i> Enviar mensaje
+                                </button>
                             </div>
                         </form>
                     </div>
