--- a/miapi/templates/miapi/productos.html
+++ b/miapi/templates/miapi/productos.html
@@ -27,6 +27,11 @@
                             <form method="post" enctype="multipart/form-data" novalidate>
                                 {% csrf_token %}
                                 {{ form|crispy }}
+                                <div class="mt-3 text-end">
+                                    <button type="submit" class="btn btn-primary px-4">
+                                        Crear Producto
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -103,4 +108,6 @@
     </div>
 </div>
 {% endblock %}
+
+
 
